<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lamore Player 1.1.9</string>
    <string name="usb">Флешки и память ГУ</string>
    <string name="volumes">Флешки</string>
    <string name="scan">Обновить</string>
    <string name="usb_access">Разрешить флешку</string>
    <string name="up">Назад</string>
    <string name="empty">Нет томов.\nФлешка должна быть в USB ГУ, не в компьютере.\nПосле вставки нажмите Обновить. Корень флешки тоже читается.</string>
    <string name="eq">Эквалайзер</string>
    <string name="now_playing">Сейчас играет</string>
    <string name="tab_music">Музыка</string>
    <string name="tab_video">Видео</string>
    <string name="tab_eq">Эквалайзер</string>
    <string name="tab_viz">Визуализация</string>
    <string name="sort_folder">папки</string>
    <string name="sort_artist">исполнитель</string>
    <string name="sort_album">альбом</string>
    <string name="sort_title">название</string>
</resources>
